# Passport-latam

./: .contract_id  .env.example  .gitignore  Cargo.toml  README.md  pnpm-lock.yaml
.cargo/: config.toml
app/: globals.css
app/(protected)/: layout.tsx
app/(protected)/company/: page.tsx
app/(protected)/emit/: page.tsx
app/components/: NavBar.tsx  WalletButton.tsx
app/hooks/: usePassportContract.ts
app/verify/[id]/: page.tsx
docs/: customer-discovery.md
frontend/: middleware.ts  package.json  proxy.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(protected)/dashboard/: page.tsx
frontend/app/(protected)/emit/: page.tsx
frontend/app/(protected)/products/: page.tsx
frontend/app/(protected)/settings/: page.tsx
frontend/app/api/certify/: route.ts
frontend/app/api/delete-account/: route.ts
frontend/app/auth/callback/: route.ts
frontend/app/components/: HeaderRouter.tsx  NavBar.tsx  PassportCard.tsx  PassportQR.tsx  PublicHeader.tsx  TraceTimeline.tsx  TxStatus.tsx  VerifyBadge.tsx  WalletButton.tsx
frontend/app/hooks/: useQR.ts  useSupabaseAuth.ts  useWallet.ts
frontend/app/lib/: hash.ts  qr.ts  soroban.ts
frontend/app/transfer/: page.tsx
frontend/app/transfer/[id]/: page.tsx
frontend/app/verify/: page.tsx
frontend/app/verify/[id]/: page.tsx
lib/: hash.ts  soroban.ts
scripts/: certify_issuer.sh  deploy.sh  emit_passport.sh  supabase_schema.sql  supabase_schema_clean.sql  supabase_storage_policies.sql  test_security.sh  verify.sh
src/: lib.rs
(+2 files in other folders)
